# dotfiles

./: .deepsource.toml  .dir-locals.el  .envrc  .git-branches.toml  .gitattibutes  .gitattributes  .gitignore  .gitmodules  .sops.yaml  .tmux.conf  .travis.yml  AGENTS.md  Brewfile  CLAUDE.md  DARWIN_SETUP.md  IMPLEMENTATION_PLAN.md  NEOVIM_NIX_MIGRATION.md  Pulumi.dev.yaml  Pulumi.yaml  README.html  README.md  README.org  SOPS_MIGRATION_GUIDE.md  SOPS_SECRETS_ONLY.md  all.password  apt.bash  bootstramp.bash  brew.bash  ci.nix  clean-repo.sh  com.googlecode.iterm2.plist  default.nix  devshell.toml  dotfiles.code-workspace  flake.nix  go.mod  go.sum  jobsets.nix  main.cpp  main.go  (+15 more)
.claude/: settings.local.json
.github/: dependabot.yml
auth/: .authinfo.gpg
common/: binary-caches.json  cachix.secret  cluster-join-token.key  configuration.nix  default.nix  oci-arm-host-capacity.secret  passwordFile  share.nix  sudoers.ldif
darwin-configurations/: office-mac.nix
darwin-modules/: client-cli.nix  client-gui.nix  default.nix  wireguard.nix
dn42/: update-roa.nix
docs/: OPENFORTIVPN-SETUP.md  gotrue-integration-summary.md  supabase-postgrest-integration.md
dots/: authinfo  authinfo.gpg  bash_profile  ctags  emacs  ensime-server.conf  gitconfig  global_ignore  gvimrc  installer.bash  mbsyncrc  msmtprc  muttrc  netrc  offlineimap.py  offlineimaprc  test.js  tmux.conf  vimrc  xmobarrc  xmodmap  xsessionrc  xsessonrc  zshrc  (+1 more)
xmonad/.xmonad/: TAGS  compton.conf  flake.nix  hie.yaml  my-xmonad.cabal  prompt-history  stack.yaml  xmonad-x86_64-linux  xmonad.errors  xmonad.hs
(+1076 files in other folders)
