
name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , directory
                     , X11
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
